<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/fondo2"
    android:orientation="vertical"
    android:padding="20dp">



    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/inpName"/>

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text|number"
        android:hint="@string/inpPhone" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text|textEmailAddress"
        android:hint="@string/inpEmail" />
    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textLongMessage"
        android:hint="@string/inpCD" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="67dp"
            android:layout_height="match_parent"
            android:onClick="mostrarCalendario"
            android:src="@drawable/calendario"
            android:id="@+id/imgCalendario"></ImageView>

        <EditText
                android:id="@+id/editTextDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="none"
                android:hint="@string/inpDate"
                android:textIsSelectable="false"
                android:focusable="false"/>

        </LinearLayout>

    <DatePicker
        android:id="@+id/dateP"
        android:layout_width="350dp"
        android:layout_height="400dp"
        android:visibility="gone">

    </DatePicker>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:paddingTop="30dp">

        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F44336"
            android:text="Next"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    </RelativeLayout>


</LinearLayout>







